--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             <div class="lcontents">
                 <h3>Registration For</h3>
                 <ul>
-                    <a href="https://thelinkcity.com/for-citizens/" target="_blank">
+                    <a href="#" target="_blank">
                         <li>
                             <i class="far fa-user"></i>
                             <h4>Citizens</h4>
                         </li>
                     </a>
-                    <a href="https://thelinkcity.com/for-partners/" target="_blank">
+                    <a href="#" target="_blank">
                         <li>
                             <i class="fas fa-briefcase"></i>
                             <h4>Clients/Partners</h4>
@@ -42,7 +42,7 @@
                             <h4>Coin Collect</h4>
                         </li>
                     </a>
-                    <a href="https://portal.thelinkcity.com/signin/" target="_blank">
+                    <a href="#" target="_blank">
                         <li>
                             <i class="fas fa-tachometer-alt"></i>
                             <h4>Access Portal</h4>
